@@ -1,4 +1,4 @@
-# Makefile template generated by pmkscan (2005-08-22 17:04).
+# Makefile template generated by pmkscan (2005-11-04 22:11).
 
 CPP=		@CPP@
 
@@ -31,6 +31,7 @@ RMFLAGS=	-rf
 PACKAGE=	@PACKAGE@
 VERSION=	@VERSION@
 
+# extra tags
 CONFDIR=	@CONFDIR@
 PRIVSEP_USER=	@PRIVSEP_USER@
 
@@ -81,9 +82,10 @@ CFGTOOL_SRCS=	cfgtool.c cfgtool.h common.h compat/config.h \
 		compat/pmk_string.h dynarray.h errmsg.h hash.h parse.h \
 		pmk_obj.h premake.h prseng.h
 
-CODEBUILD_SRCS=	codebuild.c codebuild.h compat/config.h \
-		compat/pmk_stdbool.h compat/pmk_string.h dynarray.h \
-		errmsg.h hash.h pmk_obj.h premake.h
+CODEBUILD_SRCS=	codebuild.c codebuild.h common.h compat/config.h \
+		compat/pmk_stdbool.h compat/pmk_stdio.h \
+		compat/pmk_string.h dynarray.h errmsg.h hash.h pmk_obj.h \
+		premake.h
 
 COMMON_SRCS=	common.c common.h compat/config.h compat/pmk_stdbool.h \
 		compat/pmk_stdio.h compat/pmk_string.h \
@@ -113,10 +115,11 @@ DYNARRAY_SRCS=	compat/config.h compat/pmk_stdbool.h compat/pmk_stdio.h \
 		compat/pmk_string.h dynarray.c dynarray.h
 
 FUNC_SRCS=	autoconf.h cfgtool.h codebuild.h common.h compat/config.h \
-		compat/pmk_stdbool.h compat/pmk_string.h \
-		compat/pmk_unistd.h detect.h dynarray.h errmsg.h func.c \
-		func.h functool.h hash.h hash_tools.h parse.h \
-		pkgconfig.h pmk.h pmk_obj.h premake.h prseng.h
+		compat/pmk_stdbool.h compat/pmk_stdio.h \
+		compat/pmk_string.h compat/pmk_unistd.h detect.h \
+		dynarray.h errmsg.h func.c func.h functool.h hash.h \
+		hash_tools.h parse.h pkgconfig.h pmk.h pmk_obj.h \
+		premake.h prseng.h
 
 FUNCTOOL_SRCS=	cfgtool.h common.h compat/config.h compat/pmk_ctype.h \
 		compat/pmk_stdbool.h compat/pmk_stdio.h \
@@ -180,7 +183,7 @@ PMKSCAN_SRCS=	common.h compat/config.h compat/pmk_ctype.h \
 		compat/pmk_sys_types.h compat/pmk_unistd.h dynarray.h \
 		errmsg.h hash.h hash_tools.h parse.h parse_lang.h \
 		pathtools.h pmk_obj.h pmkscan.c pmkscan.h premake.h \
-		prseng.h
+		prseng.h tags.h
 
 PMKSETUP_SRCS=	common.h compat/config.h compat/pmk_stdbool.h \
 		compat/pmk_stdio.h compat/pmk_string.h \
@@ -191,6 +194,9 @@ PMKSETUP_SRCS=	common.h compat/config.h compat/pmk_stdbool.h \
 
 PRSENG_SRCS=	compat/config.h compat/pmk_stdbool.h compat/pmk_stdio.h \
 		compat/pmk_string.h prseng.c prseng.h
+
+TAGS_SRCS=	compat/config.h compat/pmk_ctype.h compat/pmk_stdbool.h \
+		compat/pmk_stdio.h compat/pmk_string.h tags.c tags.h
 
 #
 # target dependency lists
@@ -206,7 +212,8 @@ PMKPC_OBJS=	cfgtool.o common.o compat.o dynarray.o hash.o hash_tools.o \
 		parse.o pkgconfig.o pmk_obj.o pmkpc.o prseng.o
 
 PMKSCAN_OBJS=	common.o compat.o dynarray.o hash.o hash_tools.o parse.o \
-		parse_lang.o pathtools.o pmk_obj.o pmkscan.o prseng.o
+		parse_lang.o pathtools.o pmk_obj.o pmkscan.o prseng.o \
+		tags.o
 
 PMKSETUP_OBJS=	common.o compat.o detect_cpu.o detect_cpu_asm.o \
 		dynarray.o hash.o parse.o pmk_obj.o pmksetup.o prseng.o
@@ -422,6 +429,9 @@ pmksetup.o: $(PMKSETUP_SRCS)
 
 
 prseng.o: $(PRSENG_SRCS)
+
+
+tags.o: $(TAGS_SRCS)
 
 
 
